--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
   <ul class="navbar-links">
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/lifecycle">lifeCycle Hook</a></li>
+    <li><a routerLink="/lifecycle" routerLinkActive="active">lifeCycle Hook</a></li>
+    <li><a routerLink="/cd" routerLinkActive="active">Change Detector</a></li>
   </ul>
   
 
@@ -12,4 +12,6 @@
   </div>
 </main>
 
-<router-outlet></router-outlet>
+<div class="main-container">
+  <router-outlet></router-outlet>
+</div>
