Added Pipes example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <ul class="navbar-links">
     <li><a routerLink="/lifecycle" routerLinkActive="active">lifeCycle Hook</a></li>
     <li><a routerLink="/cd" routerLinkActive="active">Change Detector</a></li>
+    <li><a routerLink="/pipes" routerLinkActive="active">Pipes</a></li>
+
   </ul>
   
 
