Implementation of NGRX

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <li><a routerLink="/lifecycle" routerLinkActive="active">lifeCycle Hook</a></li>
     <li><a routerLink="/cd" routerLinkActive="active">Change Detector</a></li>
     <li><a routerLink="/pipes" routerLinkActive="active">Pipes</a></li>
-
+    <li><a routerLink="/ngrx" routerLinkActive="active">NGRX</a></li>
   </ul>
   
 
